--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="src/css/output.css">
     <title>Document</title>
 </head>
 <body>
 
-<h1>comienzo</h1>
+<h1 class="bg-red-500 h-">comienzo</h1>
 
 </body>
 </html>
