fin del hero desktop

--- a/index.html
+++ b/index.html
@@ -1,19 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="src/output.css">
-    <title>Document</title>
-</head>
-<body>
-    
 
-<h1 class="bg-red-500 text-white text-4xl p-4">
-  TEST TAILWIND
-</h1>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Figtree:wght@300;400;500;600;700;800;900&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="src/output.css">
+  <title>Document</title>
+</head>
+
+<body class="font-sans">
+
+  <header class="relative h-screen bg-cover bg-center flex flex-col text-white"
+    style="background-image: url(./src/imgs/jc-barandas-1920x1080-sin-bordes.png);">
+
+    <div class="absolute inset-0 bg-black/60 z-0"></div>
+
+    <nav class="relative grid grid-cols-3 px-10 pt-3">
+
+      <div>
+        <img src="./src/imgs/logo-jc-blanco.png" class="w-28" alt="">
+      </div>
+
+      <div class="flex justify-between items-center">
+        <a class="hover:text-blue-600 transition-all cursor-pointer">Inicio</a>
+        <a class="hover:text-blue-600 transition-all cursor-pointer">Modelos</a>
+        <a class="hover:text-blue-600 transition-all cursor-pointer">Proyectos</a>
+        <a class="hover:text-blue-600 transition-all cursor-pointer">Especificaciones</a>
+        <a class="hover:text-blue-600 transition-all cursor-pointer" class="font-semibold">Contactanos</a>
+      </div>
+
+      <div class="flex justify-end items-center">
+        <span>Ventas@jcherrajes.com</span>
+      </div>
+
+
+    </nav>
+
+    <section class="relative z-10 flex-1 flex flex-col justify-center px-10">
+
+
+      <div class="grid grid-cols-2">
+        <div class="flex justify-center flex-col">
+          <div class="animate-fade-down">
+            <h1 class="text-7xl">Barandas de <span class="text-blue-600">Acero Inoxidable</span> de Alta Calidad</h1>
+          </div>
+          <div class="flex gap-6 mt-6">
+            <button
+              class="bg-white text-black animate-fade-up px-6 py-3 transition-all hover:bg-white/50 hover:text-white border-transparent rounded-xl">Ver
+              proyectos</button>
+            <button
+              class="border-2 border-white animate-fade-up animate-delay-[0.1s] transition-all hover:bg-blue-600 hover:border-transparent px-6 py-3 rounded-xl">Solicitar
+              cotización</button>
+          </div>
+        </div>
+
+
+        <div class="flex flex-col gap-6">
+
+          <div class="animate-fade-right">
+            <div
+              class="flex flex-col gap-2  bg-white/10 p-6 hover:bg-blue-700/30 transition-all cursor-pointer rounded-xl transform hover:scale-105">
+              <span class="text-xl">Asesoramiento personalizado</span>
+              <span>Diseñamos y fabricamos barandas, pasamanos y puertas de seguridad según las medidas y necesidades de
+                cada proyecto.</span>
+            </div>
+          </div>
+
+          <div class="animate-fade-right animate-delay-[0.2s]">
+            <div
+              class="flex flex-col gap-2  bg-white/10 p-6 hover:bg-blue-700/30 transition-all cursor-pointer rounded-xl transform hover:scale-105">
+              <span class="text-xl">Calidad y seguridad garantizadas</span>
+              <span>Trabajamos con acero inoxidable y vidrios de seguridad, garantizando resistencia, durabilidad y
+                excelente terminación.</span>
+            </div>
+          </div>
+
+
+          <div class="animate-fade-right animate-delay-[0.4s]">
+            <div
+              class="flex flex-col gap-2   bg-white/10 p-6 hover:bg-blue-700/30 transition-all cursor-pointer rounded-xl transform hover:scale-105">
+              <span class="text-xl">Experiencia comprobada</span>
+              <span>Contamos con experiencia en obras residenciales y proyectos destacados en distintas
+                localidades.</span>
+            </div>
+          </div>
+
+
+        </div>
+      </div>
+
+    </section>
+
+    </div>
+  </header>
+
+  ACA ARRANCA EL CONTENIDO
+  ACA ARRANCA EL CONTENIDO
+
+  ACA ARRANCA EL CONTENIDO
+
+  ACA ARRANCA EL CONTENIDO
+  ACA ARRANCA EL CONTENIDO
+  ACA ARRANCA EL CONTENIDO
+
+  ACA ARRANCA EL CONTENIDO
+  ACA ARRANCA EL CONTENIDO
+  ACA ARRANCA EL CONTENIDO
+  ACA ARRANCA EL CONTENIDO
+  ACA ARRANCA EL CONTENIDO
 
 
 
 </body>
+
 </html>
