--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <title>Document</title>
 </head>
 
-<body class="font-sans">
+<body class="font-sans bg-slate-900">
 
   <header class="relative h-screen bg-cover bg-center flex flex-col text-white"
     style="background-image: url(./src/imgs/jc-barandas-1920x1080-sin-bordes.png);">
@@ -25,7 +25,7 @@
         <img src="./src/imgs/logo-jc-blanco.png" class="w-28" alt="">
       </div>
 
-      <div class="flex justify-between items-center">
+      <div class="flex justify-between items-center" >
         <a class="hover:text-blue-600 transition-all cursor-pointer">Inicio</a>
         <a class="hover:text-blue-600 transition-all cursor-pointer">Modelos</a>
         <a class="hover:text-blue-600 transition-all cursor-pointer">Proyectos</a>
@@ -45,7 +45,7 @@
 
       <div class="grid grid-cols-2">
         <div class="flex justify-center flex-col">
-          <div class="animate-fade-down">
+          <div class="animate-fade-down" style="text-shadow: 0 4px 8px rgba(0,0,0,.6);">
             <h1 class="text-7xl">Barandas de <span class="text-blue-600">Acero Inoxidable</span> de Alta Calidad</h1>
           </div>
           <div class="flex gap-6 mt-6">
@@ -63,7 +63,7 @@
 
           <div class="animate-fade-right">
             <div
-              class="flex flex-col gap-2  bg-white/10 p-6 hover:bg-blue-700/30 transition-all cursor-pointer rounded-xl transform hover:scale-105">
+              class="flex flex-col gap-2  bg-white/10 p-6 hover:backdrop-blur-sm hover:bg-blue-700/30 transition-all cursor-pointer rounded-xl transform hover:scale-[1.02]">
               <span class="text-xl">Asesoramiento personalizado</span>
               <span>Diseñamos y fabricamos barandas, pasamanos y puertas de seguridad según las medidas y necesidades de
                 cada proyecto.</span>
@@ -72,7 +72,7 @@
 
           <div class="animate-fade-right animate-delay-[0.2s]">
             <div
-              class="flex flex-col gap-2  bg-white/10 p-6 hover:bg-blue-700/30 transition-all cursor-pointer rounded-xl transform hover:scale-105">
+              class="flex flex-col gap-2  bg-white/10 p-6 hover:backdrop-blur-sm hover:bg-blue-700/30 transition-all cursor-pointer rounded-xl transform hover:scale-[1.02]">
               <span class="text-xl">Calidad y seguridad garantizadas</span>
               <span>Trabajamos con acero inoxidable y vidrios de seguridad, garantizando resistencia, durabilidad y
                 excelente terminación.</span>
@@ -82,7 +82,7 @@
 
           <div class="animate-fade-right animate-delay-[0.4s]">
             <div
-              class="flex flex-col gap-2   bg-white/10 p-6 hover:bg-blue-700/30 transition-all cursor-pointer rounded-xl transform hover:scale-105">
+              class="flex flex-col gap-2   bg-white/10 p-6 hover:backdrop-blur-sm hover:bg-blue-700/30 transition-all cursor-pointer rounded-xl transform hover:scale-[1.02]">
               <span class="text-xl">Experiencia comprobada</span>
               <span>Contamos con experiencia en obras residenciales y proyectos destacados en distintas
                 localidades.</span>
@@ -98,21 +98,95 @@
     </div>
   </header>
 
-  ACA ARRANCA EL CONTENIDO
-  ACA ARRANCA EL CONTENIDO
 
-  ACA ARRANCA EL CONTENIDO
 
-  ACA ARRANCA EL CONTENIDO
-  ACA ARRANCA EL CONTENIDO
-  ACA ARRANCA EL CONTENIDO
 
-  ACA ARRANCA EL CONTENIDO
-  ACA ARRANCA EL CONTENIDO
-  ACA ARRANCA EL CONTENIDO
-  ACA ARRANCA EL CONTENIDO
-  ACA ARRANCA EL CONTENIDO
+  <main class="mx-32 h-screen">
 
+  <!-- CONTENEDOR CON IMAGEN -->
+  <div
+    class="relative grid grid-cols-2 mt-40 h-[70vh] bg-cover bg-center rounded-xl"
+    style="background-image: url(./src/imgs/img-form.jpg);"
+  >
+
+    <!-- OVERLAY SOLO DE LA IMAGEN -->
+    <div class="absolute inset-0 bg-black/60 z-0"></div>
+
+    <!-- COLUMNA IZQUIERDA -->
+    <div class="relative z-10 text-7xl text-white flex flex-col justify-center px-10" style="text-shadow: 0 4px 8px rgba(0,0,0,.6);">
+      <span class="font-semibold">Pedí tu <span class="text-blue-600">cotización</span></span>
+      <span class="text-4xl mt-4 text-white/80">
+        Un asesor se pondra en contacto pronto.
+      </span>
+    </div>
+
+    <!-- COLUMNA DERECHA -->
+    <div class="relative z-10 flex justify-center items-center">
+      <div class="relative w-[70%]">
+
+        <!-- Degrade top -->
+        <div class="h-5 rounded-t-3xl bg-gradient-to-r from-blue-900 via-blue-600 to-blue-400"></div>
+
+        <!-- Card -->
+          <div class="bg-white/30 backdrop-blur-sm p-6 rounded-b-3xl hover:backdrop-blur-0 transition-all">
+            <form id="whatsapp-form" class="flex flex-col gap-4">
+
+              <input id="nombre" class="p-2 rounded-3xl" type="text" placeholder="Nombre" required>
+
+              <select id="interes" class="p-2 rounded-3xl" required>
+                <option value="">¿En qué estás interesado?</option>
+                <option value="Barandas">Barandas</option>
+                <option value="Pasamanos">Pasamanos</option>
+                <option value="Puertas de seguridad">Puertas de seguridad</option>
+              </select>
+
+              <input id="ubicacion" class="p-2 rounded-3xl" type="text" placeholder="¿En qué zona estás?" required>
+
+              <textarea id="mensaje" class="p-2 rounded-3xl h-40 " placeholder="Contanos un poco más del proyecto"
+                required></textarea>
+
+              <button class="bg-green-600 hover:bg-green-700 transition-all text-white py-3 rounded-xl">
+                Enviar por WhatsApp
+              </button>
+
+            </form>
+          </div>
+
+      </div>
+    </div>
+
+  </div>
+
+</main>
+
+
+
+
+
+  <script>
+    const form = document.getElementById("whatsapp-form");
+
+    form.addEventListener("submit", function (e) {
+      e.preventDefault();
+
+      const nombre = document.getElementById("nombre").value;
+      const interes = document.getElementById("interes").value;
+      const ubicacion = document.getElementById("ubicacion").value;
+      const mensaje = document.getElementById("mensaje").value;
+
+      const texto = `
+Hola, mi nombre es ${nombre}.
+Estoy interesado en: ${interes}.
+Mi ubicación es: ${ubicacion}.
+Mensaje: ${mensaje}
+    `;
+
+      const numero = "5491153855217"; // WhatsApp con código país
+      const url = `https://wa.me/${numero}?text=${encodeURIComponent(texto)}`;
+
+      window.open(url, "_blank");
+    });
+  </script>
 
 
 </body>
