--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
   <main class="mx-32 ">
 
-<div id="sobre-nosotros" class="mt-20">
+    <!-- <div id="sobre-nosotros" class="mt-20">
 <h2 class="text-3xl text-center font-semibold"> Sobre Nosotros </h2>
       <div class="grid grid-cols-2 text-center mt-10 text-lg">
 
@@ -145,7 +145,111 @@
 
       </div>
     </div>
-  </div>
+  </div> -->
+
+    <div id="caracteristicas" class="mt-32">
+      <h2 class="text-3xl mb-10 "> • Nos caracteriza</h2>
+      <div class="grid grid-cols-2 gap-6">
+
+        <div class="flex justify-center">
+          <div class="w-[80%] flex flex-col gap-6">
+            <div
+              class="bg-blue-600/30 rounded-xl p-6 border-2 border-blue-600 transform transition-all hover:scale-[1.02]">
+              <div class="flex items-center gap-2">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                  stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                  class="lucide lucide-badge-check-icon lucide-badge-check">
+                  <path
+                    d="M3.85 8.62a4 4 0 0 1 4.78-4.77 4 4 0 0 1 6.74 0 4 4 0 0 1 4.78 4.78 4 4 0 0 1 0 6.74 4 4 0 0 1-4.77 4.78 4 4 0 0 1-6.75 0 4 4 0 0 1-4.78-4.77 4 4 0 0 1 0-6.76Z" />
+                  <path d="m9 12 2 2 4-4" />
+                </svg>
+                <span class="text-xl font-semibold text-white/70">Calidad en cada detalle</span>
+              </div>
+              <p class="text-blue-600 ">Cuidamos cada terminación y material para garantizar trabajos duraderos,
+                funcionales y estéticamente
+                sólidos.</p>
+            </div>
+
+
+            <div
+              class="bg-blue-600/30 rounded-xl p-6 border-2 border-blue-600 transform transition-all hover:scale-[1.02]">
+              <div class="flex items-center gap-2">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                  stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                  class="lucide lucide-handshake-icon lucide-handshake">
+                  <path d="m11 17 2 2a1 1 0 1 0 3-3" />
+                  <path
+                    d="m14 14 2.5 2.5a1 1 0 1 0 3-3l-3.88-3.88a3 3 0 0 0-4.24 0l-.88.88a1 1 0 1 1-3-3l2.81-2.81a5.79 5.79 0 0 1 7.06-.87l.47.28a2 2 0 0 0 1.42.25L21 4" />
+                  <path d="m21 3 1 11h-2" />
+                  <path d="M3 3 2 14l6.5 6.5a1 1 0 1 0 3-3" />
+                  <path d="M3 4h8" />
+                </svg>
+                <span class="text-xl font-semibold text-white/70">Compromiso y responsabilidad</span>
+              </div>
+              <p class="text-blue-600">Cumplimos con los tiempos acordados y acompañamos al cliente en cada etapa del
+                proyecto.</p>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="flex justify-center">
+          <div class="w-[80%] flex flex-col gap-6">
+            <div
+              class="bg-blue-600/30 rounded-xl p-6 border-2 border-blue-600 transform transition-all hover:scale-[1.02]">
+              <div class="flex items-center gap-2">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                  stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                  class="lucide lucide-pencil-ruler-icon lucide-pencil-ruler">
+                  <path d="M13 7 8.7 2.7a2.41 2.41 0 0 0-3.4 0L2.7 5.3a2.41 2.41 0 0 0 0 3.4L7 13" />
+                  <path d="m8 6 2-2" />
+                  <path d="m18 16 2-2" />
+                  <path d="m17 11 4.3 4.3c.94.94.94 2.46 0 3.4l-2.6 2.6c-.94.94-2.46.94-3.4 0L11 17" />
+                  <path
+                    d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z" />
+                  <path d="m15 5 4 4" />
+                </svg>
+                <span class="text-xl font-semibold text-white/70">Diseño a medida</span>
+              </div>
+              <p class="text-blue-600">Cada trabajo es único. Adaptamos diseños y soluciones a las necesidades reales de
+                cada espacio.</p>
+            </div>
+
+
+            <div
+              class="bg-blue-600/30 rounded-xl p-6 border-2 border-blue-600 transform transition-all hover:scale-[1.02]">
+              <div class="flex items-center gap-2">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                  stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                  class="lucide lucide-building-icon lucide-building">
+                  <path d="M12 10h.01" />
+                  <path d="M12 14h.01" />
+                  <path d="M12 6h.01" />
+                  <path d="M16 10h.01" />
+                  <path d="M16 14h.01" />
+                  <path d="M16 6h.01" />
+                  <path d="M8 10h.01" />
+                  <path d="M8 14h.01" />
+                  <path d="M8 6h.01" />
+                  <path d="M9 22v-3a1 1 0 0 1 1-1h4a1 1 0 0 1 1 1v3" />
+                  <rect x="4" y="2" width="16" height="20" rx="2" />
+                </svg>
+                <span class="text-xl font-semibold text-white/70">Experiencia y confianza</span>
+              </div>
+              <p class="text-blue-600">Nuestra trayectoria respalda cada proyecto, construyendo relaciones basadas en
+                confianza y resultados.</p>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
+
+
+
+
+
 
 
 
@@ -197,10 +301,10 @@
 
                 <div class="flex justify-center gap-6">
                   <button type="button" id="btn-whatsapp"
-                    class="bg-green-600 hover:bg-green-700 p-6 transition-all  py-3 rounded-xl">
+                    class="bg-green-600 text-white hover:bg-green-700 p-6 transition-all  py-3 rounded-xl">
                     Enviar por WhatsApp
                   </button>
-                  <button class="bg-blue-600 hover:bg-blue-700 p-6 transition-all py-3 rounded-xl">
+                  <button class="bg-blue-600 text-white hover:bg-blue-700 p-6 transition-all py-3 rounded-xl">
                     Enviar por e-mail
                   </button>
                 </div>
@@ -251,7 +355,6 @@
       </div>
 
     </div>
-
 
   </main>
 
