--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
     </div>
   </div> -->
 
-    <div id="caracteristicas" class="mt-32">
-      <h2 class="text-3xl mb-10 "> • Nos caracteriza</h2>
+    <div id="caracteristicas" class="mt-24">
+       <h2 class="text-3xl font-semibold text-blue-600 text-center mb-10">• Nos caracteriza • </h2>
       <div class="grid grid-cols-2 gap-6">
 
         <div class="flex justify-center">
@@ -156,6 +156,7 @@
             <div
               class="bg-blue-600/30 rounded-xl p-6 border-2 border-blue-600 transform transition-all hover:scale-[1.02]">
               <div class="flex items-center gap-2">
+                <div class="p-2 bg-blue-500/10 rounded-lg">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                   stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                   class="lucide lucide-badge-check-icon lucide-badge-check">
@@ -163,6 +164,7 @@
                     d="M3.85 8.62a4 4 0 0 1 4.78-4.77 4 4 0 0 1 6.74 0 4 4 0 0 1 4.78 4.78 4 4 0 0 1 0 6.74 4 4 0 0 1-4.77 4.78 4 4 0 0 1-6.75 0 4 4 0 0 1-4.78-4.77 4 4 0 0 1 0-6.76Z" />
                   <path d="m9 12 2 2 4-4" />
                 </svg>
+                </div>
                 <span class="text-xl font-semibold text-white/70">Calidad en cada detalle</span>
               </div>
               <p class="text-blue-600 ">Cuidamos cada terminación y material para garantizar trabajos duraderos,
@@ -174,6 +176,7 @@
             <div
               class="bg-blue-600/30 rounded-xl p-6 border-2 border-blue-600 transform transition-all hover:scale-[1.02]">
               <div class="flex items-center gap-2">
+                <div class="p-2 bg-blue-500/10 rounded-lg">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                   stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                   class="lucide lucide-handshake-icon lucide-handshake">
@@ -184,6 +187,7 @@
                   <path d="M3 3 2 14l6.5 6.5a1 1 0 1 0 3-3" />
                   <path d="M3 4h8" />
                 </svg>
+                </div>
                 <span class="text-xl font-semibold text-white/70">Compromiso y responsabilidad</span>
               </div>
               <p class="text-blue-600">Cumplimos con los tiempos acordados y acompañamos al cliente en cada etapa del
@@ -198,6 +202,7 @@
             <div
               class="bg-blue-600/30 rounded-xl p-6 border-2 border-blue-600 transform transition-all hover:scale-[1.02]">
               <div class="flex items-center gap-2">
+                <div class="p-2 bg-blue-500/10 rounded-lg">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                   stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                   class="lucide lucide-pencil-ruler-icon lucide-pencil-ruler">
@@ -209,6 +214,7 @@
                     d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z" />
                   <path d="m15 5 4 4" />
                 </svg>
+                 </div>
                 <span class="text-xl font-semibold text-white/70">Diseño a medida</span>
               </div>
               <p class="text-blue-600">Cada trabajo es único. Adaptamos diseños y soluciones a las necesidades reales de
@@ -219,6 +225,7 @@
             <div
               class="bg-blue-600/30 rounded-xl p-6 border-2 border-blue-600 transform transition-all hover:scale-[1.02]">
               <div class="flex items-center gap-2">
+                <div class="p-2 bg-blue-500/10 rounded-lg">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                   stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                   class="lucide lucide-building-icon lucide-building">
@@ -234,6 +241,7 @@
                   <path d="M9 22v-3a1 1 0 0 1 1-1h4a1 1 0 0 1 1 1v3" />
                   <rect x="4" y="2" width="16" height="20" rx="2" />
                 </svg>
+                </div>
                 <span class="text-xl font-semibold text-white/70">Experiencia y confianza</span>
               </div>
               <p class="text-blue-600">Nuestra trayectoria respalda cada proyecto, construyendo relaciones basadas en
