sección sobre nosotros

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Figtree:wght@300;400;500;600;700;800;900&display=swap"
     rel="stylesheet" />
-  <link rel="stylesheet" href="src/output.css">
+  <link rel="stylesheet" href="src/output.css?v=2">
   <title>Document</title>
 </head>
 
@@ -23,7 +23,8 @@
 
 
 
-<body class="font-sans text-white  bg-slate-900">
+<body class="font-sans text-white bg-[radial-gradient(25%_35%_at_20%_60%,rgba(37,99,235,0.25)_0%,transparent_100%),radial-gradient(30%_40%_at_85%_30%,rgba(29,78,216,0.25)_0%,transparent_100%),radial-gradient(45%_55%_at_50%_80%,rgba(30,64,175,0.35)_0%,transparent_100%),linear-gradient(135deg,#020617_0%,#020617_100%)] bg-cover bg-no-repeat">
+
 
   <header class="relative h-screen bg-cover bg-center flex flex-col "
     style="background-image: url(./src/imgs/jc-barandas-1920x1080-sin-bordes.png);">
@@ -115,37 +116,38 @@
 
   <main class="mx-32 ">
 
-    <!-- <div id="sobre-nosotros" class="mt-20">
-<h2 class="text-3xl text-center font-semibold"> Sobre Nosotros </h2>
-      <div class="grid grid-cols-2 text-center mt-10 text-lg">
+    <div id="sobre-nosotros" class="mt-20">
+<h2 class="text-3xl text-center font-semibold text-blue-600"> Sobre Nosotros </h2>
+      <div class="flex gap-6 justify-center text-center mt-10 text-lg">
 
 
-        <div class="w-[80%] flex flex-col gap-6  border-r-2 border-blue-600">
-          <p> En <span class="text-blue-600">JC Barandas</span> nos especializamos en el diseño, fabricación e instalación de barandas, pasamanos y
-            estructuras
-            en acero inoxidable, combinando funcionalidad, seguridad y estética en cada proyecto.</p>
+        <div class="w-[80%] flex flex-col gap-6 ">
+         <p class="h-[50%]"> En <span class="text-blue-600 font-semibold">JC Barandas</span> nos especializamos en el diseño, fabricación e instalación de barandas, pasamanos y estructuras en acero inoxidable, combinando<span class="text-blue-600 font-semibold"> funcionalidad, seguridad y estética</span> en cada proyecto.</p>
 
-          <p>Contamos con taller propio, lo que nos permite controlar todo el proceso: desde la selección de materiales
+          <p class="h-[50%]">Contamos con taller propio, lo que nos permite controlar todo el proceso: desde la selección de materiales
             hasta
             la terminación final. Trabajamos con acero inoxidable de alta calidad y vidrios de seguridad, garantizando
-            durabilidad, resistencia y un acabado prolijo en cada detalle.</p>
+            <span class="text-blue-600 font-semibold"> durabilidad, resistencia y un acabado prolijo</span> en cada detalle.</p>
         </div>
 
-        <div class="w-[80%] flex flex-col gap-6"> 
-          <p>Atendemos proyectos residenciales y comerciales, adaptándonos a las necesidades de cada cliente y brindando
-            asesoramiento personalizado desde la primera consulta. Creemos que cada espacio es único, por eso
-            desarrollamos
-            soluciones a medida, priorizando siempre la seguridad y el diseño.</p>
+        <div class=" border-r-2 border-blue-600"></div>
 
-          <p>Nos encontramos en Zona Norte, donde recibimos a nuestros clientes y coordinamos visitas para tomar medidas
+        <div class="w-[80%] flex flex-col  gap-6"> 
+          <p class="h-[50%]">Atendemos proyectos residenciales y comerciales,<span class="text-blue-600 font-semibold"> adaptándonos a las necesidades de cada cliente </span>y brindando
+            asesoramiento personalizado desde la primera consulta. Creemos que cada espacio es único, por eso
+           <span class="text-blue-600 font-semibold"> desarrollamos
+            soluciones a medida</span>, priorizando siempre la seguridad y el diseño.
+          </p>
+
+           <p class="h-[50%]">  Nos encontramos en Zona Norte, donde recibimos a nuestros clientes y coordinamos visitas para tomar medidas
             y
-            evaluar cada proyecto en el lugar. Nuestro objetivo es ofrecer un servicio confiable, transparente y de
-            calidad,
+            evaluar cada proyecto en el lugar. Nuestro objetivo es ofrecer un<span class="text-blue-600 font-semibold"> servicio confiable, transparente y de
+            calidad</span>,
             respaldado por la experiencia y el compromiso con cada trabajo realizado.</p>
 
       </div>
     </div>
-  </div> -->
+  </div>
 
     <div id="caracteristicas" class="mt-24">
        <h2 class="text-3xl font-semibold text-blue-600 text-center mb-10">• Nos caracteriza • </h2>
@@ -252,11 +254,6 @@
         </div>
       </div>
     </div>
-
-
-
-
-
 
 
 
